<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:orderInCategory="1"/>

    <item
        android:title="@string/sort_by_title"
        android:id="@+id/menu_search_option"
        app:showAsAction="withText"
        android:orderInCategory="2">
        <menu>
            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/sort_by_popularity"
                    android:title="@string/sort_by_popularity"
                    android:orderInCategory="2"/>
                <item
                    android:id="@+id/sort_by_alphabetical"
                    android:title="@string/sort_by_alphabetical"
                    android:orderInCategory="3"/>
                <item
                    android:id="@+id/sort_by_newest"
                    android:title="@string/sort_by_newest"
                    android:orderInCategory="4"/>
            </group>
        </menu>
    </item>

</menu>